backend/mentors seeded

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="weatherApp">
+<html lang="en" ng-app="MentMe">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Weather App</title>
+  <title>MentMe</title>
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
@@ -39,10 +39,14 @@
   <script type="text/javascript" src="./app.js"></script>
 
   <!-- services -->
-  <script type="text/javascript" src="./services/weatherService.js"></script>
+  <script type="text/javascript" src="./services/homeService.js"></script>
+  <script type="text/javascript" src="./services/menteeService.js"></script>
+  <script type="text/javascript" src="./services/mentorService.js"></script>
 
   <!-- controllers -->
-  <script type="text/javascript" src="./controllers/weatherController.js"></script>
+  <script type="text/javascript" src="./controllers/homeController.js"></script>
+  <script type="text/javascript" src="./controllers/menteeController.js"></script>
+  <script type="text/javascript" src="./controllers/mentorController.js"></script>
 
 </body>
 
