--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,36 @@
 </head>
 
 <body>
+  <nav>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#!/">
+        <img class="logo" alt="Brand" src="./css/MentMe.png">
+      </a>
+    </div>
+
+    <ul>
+      <li>
+        <a ui-sref="home" class="btn btn-success-outline home">Home</a>
+      </li>
+      <li>
+        <a ui-sref="mentee">Mentees</a>
+      </li>
+      <li>
+        <a ui-sref="mentor">Mentors</a>
+      </li>
+
+    </ul>
+  </nav>
 
   <div ui-view>
 
   </div>
-  
+
   <!-- modules -->
   <script type="text/javascript" src="./app.js"></script>
 
